try to fix cors problem 2