@@ -1,15 +1,12 @@
 package org.nutriGuideBuddy.config.security;
 
 import lombok.RequiredArgsConstructor;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
-import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.reactive.EnableWebFluxSecurity;
 import org.springframework.security.config.web.server.SecurityWebFiltersOrder;
 import org.springframework.security.config.web.server.ServerHttpSecurity;
-import org.springframework.security.core.userdetails.ReactiveUserDetailsService;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.server.SecurityWebFilterChain;
@@ -18,15 +15,13 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.reactive.CorsConfigurationSource;
 import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
+import java.util.List;
 
 @EnableWebFluxSecurity
 @Configuration
 @RequiredArgsConstructor
 public class SecurityConfig {
 
-  @Value("${allowed.origins}")
-  private String[] allowedOrigins;
   private final JwtTokenAuthenticationFilter jwtAuthenticationFilter;
 
   @Bean
@@ -34,7 +29,7 @@ public class SecurityConfig {
     return http
         .csrf(ServerHttpSecurity.CsrfSpec::disable)
         .httpBasic(ServerHttpSecurity.HttpBasicSpec::disable)
-        .cors(Customizer.withDefaults())
+        .cors(cors -> cors.configurationSource(corsConfigurationSource()))
         .securityContextRepository(NoOpServerSecurityContextRepository.getInstance())
         .authorizeExchange(request ->
             request
@@ -58,7 +53,7 @@ public class SecurityConfig {
   public CorsConfigurationSource corsConfigurationSource() {
 
     CorsConfiguration corsConfig = new CorsConfiguration();
-    corsConfig.setAllowedOrigins(Arrays.asList(allowedOrigins));
+    corsConfig.setAllowedOrigins(List.of("https://nutriguidebuddy.netlify.app"));
     corsConfig.addAllowedMethod("*");
     corsConfig.addAllowedHeader("*");
 
